新增 非father打包模式、jest单元测试、less/css多种样式支持

--- a/packages/comps/src/slider/style.less
+++ b/packages/comps/src/slider/style.less
@@ -1,4 +1,11 @@
-.text {
-  color: #333;
-  font-size: 14px;
+@import '../style.less';
+
+@prefixCls: budlocks_comps_;
+
+.@{prefixCls}slider {
+  .text {
+    color: #b3b3b3;
+    font-size: 14px;
+    margin-right: 12px;
+  }
 }
